example/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koa-vault
spec:
  selector:
    app: koa-vault
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
